--- a/css/ampshared.css
+++ b/css/ampshared.css
@@ -585,9 +585,17 @@ amp-accordion > section[expanded] > :last-child {
   r: 24;
 }
 
-/* shim forces spinner and logo fills to be white */
-.i-amphtml-new-loader-has-shim .i-amphtml-new-loader-logo * {
+/*
+  shim forces spinner and logo fills to be white.
+  using i-amphtml-new-loader-white-on-shim and
+  i-amphtml-new-loader-transparent-on-shim each logo can customize which
+  parts become white and which parts become transparent when on a shim.
+*/
+.i-amphtml-new-loader-has-shim .i-amphtml-new-loader-white-on-shim {
   fill: #ffffff !important;
+}
+.i-amphtml-new-loader-has-shim .i-amphtml-new-loader-transparent-on-shim {
+  fill: transparent !important;
 }
 .i-amphtml-new-loader-has-shim .i-amphtml-new-loader-spinner-segment {
   stroke: #ffffff !important
