--- a/extensions/amp-story/1.0/amp-story-system-layer.css
+++ b/extensions/amp-story/1.0/amp-story-system-layer.css
@@ -120,10 +120,12 @@
   width: 100% !important;
   transform: translateZ(0) scaleX(0) !important; /* 0-width by default */
   transform-origin: left !important;
+  -moz-transform-origin: 0% !important; /* Fixes glitchy progress bar in firefox mobile. */
 }
 
 [dir=rtl] .i-amphtml-story-page-progress-value {
   transform-origin: right !important;
+  -moz-transform-origin: 100% !important; /* Fixes glitchy progress bar in firefox mobile. */
 }
 
 .i-amphtml-first-page-active[info] .i-amphtml-message-container {
