--- a/extensions/amp-story-auto-ads/0.1/amp-story-auto-ads-attribution.css
+++ b/extensions/amp-story-auto-ads/0.1/amp-story-auto-ads-attribution.css
@@ -15,7 +15,7 @@
  */
 
 .i-amphtml-story-ad-attribution {
-  position: fixed;
+  position: absolute;
   bottom: 0 !important;
   max-height: 15px !important;
   /* 1 greater than cta layer. */
