--- a/extensions/amp-list/0.1/amp-list.css
+++ b/extensions/amp-list/0.1/amp-list.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+amp-list.i-amphtml-list-fetch-error [fetch-error] {
+  display: block;
+}
+
 amp-list[load-more] [load-more-loading].amp-visible,
 amp-list[load-more] [load-more-failed].amp-visible,
 amp-list[load-more] [load-more-button].amp-visible,
