Start cleaning up implementation.

--- a/build-system/tasks/create-golden-css/css/main.css
+++ b/build-system/tasks/create-golden-css/css/main.css
@@ -603,6 +603,9 @@ form [submit-error] {
   display: none;
 }
 
+/**
+ * amp-list error messaging container should be hidden at first.
+ */
 amp-list [fetch-error] {
   display: none;
 }
