--- a/extensions/amp-list/0.1/amp-list.css
+++ b/extensions/amp-list/0.1/amp-list.css
@@ -14,6 +14,9 @@
  * limitations under the License.
  */
 
+/**
+ * Show the error messaging container on fetch error.
+ */
 amp-list.i-amphtml-list-fetch-error [fetch-error] {
   display: block;
 }
