--- a/extensions/amp-loader/0.1/amp-loader.css
+++ b/extensions/amp-loader/0.1/amp-loader.css
@@ -147,6 +147,13 @@
   transform: scale(calc(12/ 22));
 }
 
+.i-amphtml-new-loader-size-small .i-amphtml-new-loader-spinner-path {
+  animation-delay: 1.4s, 2s;
+  animation-delay:
+      calc(1.4s - var(--loader-delay-offset)),
+      calc(2s - var(--loader-delay-offset));
+}
+
 /* Animations only run when active */
 .i-amphtml-new-loader * {
   animation-play-state: paused;
@@ -191,16 +198,21 @@
   }
 
   to {
+    /* This value is steps * svgSize from spinner,js */
     transform: translateX(-1440px);
   }
 }
 
 @keyframes frame-position-infinite-spin {
   from {
+    /* This value is steps * svgSize from spinner,js */
     transform: translateX(-1440px);
   }
 
   to {
+    /*
+     * This value is based on the transform for the first spin and
+     * (2 * steps - 1) * svgSize from spinner,js */
     transform: translateX(-4272px);
   }
 }
