Move loader out of ads, refactor ads loader svg.
- Ad localDev flag to test page.

--- a/extensions/amp-loader/0.1/amp-loader.css
+++ b/extensions/amp-loader/0.1/amp-loader.css
@@ -15,6 +15,7 @@
  */
 
 
+
 /* Placeholder */
 .i-amphtml-default-placeholder {
   background-color: #f8f8f8;
@@ -162,6 +163,12 @@
 
 .i-amphtml-new-loader.amp-active * {
   animation-play-state: running;
+}
+
+/* Ads */
+.i-amphtml-ad-badge-label {
+  font-size: 11px;
+  font-family: sans-serif;
 }
 
 @keyframes i-amphtml-new-loader-fade-in {
