--- a/extensions/amp-addthis/0.1/amp-addthis.css
+++ b/extensions/amp-addthis/0.1/amp-addthis.css
@@ -34,6 +34,9 @@ amp-addthis .i-amphtml-addthis-close {
   cursor: pointer!important;
   position: relative!important;
   z-index: 1!important;
+  background-color: transparent!important;
+  border: none!important;
+
 }
 amp-addthis .i-amphtml-addthis-close:hover {
   opacity: 1!important;
